[package]
name = "tee-rs"
version = "0.1.0"
authors = ["Victor Porton <porton.victor@gmail.com>"]
description = "Duplicate ouptut of a stream into several other streams."
license = "LGPL-2.1-or-later"
keywords = ["async-std", "async", "asynchronous", "stream", "async stream", "asynchronous stream", "tee", "fork", "duplicate", "duplicate content"]
categories = ["asynchronous", "caching", "concurrency", "rust-patterns"]

[lib]
name = "tee"
path = "src/lib.rs"
test = true

[dependencies]
# async-std = "1.10.0"
futures-core = "0.3.17"
